fix bugs and add sortBy price, stock, discount